--- a/continuous_control/Report.html
+++ b/continuous_control/Report.html
@@ -14490,7 +14490,49 @@ update_frequency steps<br>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Training">Training<a class="anchor-link" href="#Training">&#182;</a></h1>
+<h1 id="Training">Training<a class="anchor-link" href="#Training">&#182;</a></h1><p>Below are the default settings for the hyper-parameters</p>
+<table>
+<thead><tr>
+<th>hyper-parameter</th>
+<th>value</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>actor optimizer learning rate</td>
+<td>3e-4</td>
+</tr>
+<tr>
+<td>critic optimizer learning rate</td>
+<td>3e-4</td>
+</tr>
+<tr>
+<td>replay buffer size</td>
+<td>int(1e6)</td>
+</tr>
+<tr>
+<td>gamma (discount rate)</td>
+<td>0.99</td>
+</tr>
+<tr>
+<td>tau (target soft update factor)</td>
+<td>0.005</td>
+</tr>
+<tr>
+<td>action noise</td>
+<td>0.2</td>
+</tr>
+<tr>
+<td>noise clip</td>
+<td>0.5</td>
+</tr>
+<tr>
+<td>(policy and target) update frequency</td>
+<td>2</td>
+</tr>
+</tbody>
+</table>
+
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
